# talko

server/: CMakeLists.txt  README.md  build.sh  make_build.sh
server/output/: CMakeCache.txt  Makefile  cmake_install.cmake
server/output/src/: Makefile  cmake_install.cmake
server/output/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
server/scripts/: .env  database.md  docker-compose.yml  setup_mysql.sh  table_init.sql
server/src/: CMakeLists.txt  main.cpp
server/src/common/: msg.h  platform.h  stringutil.cpp  stringutil.h  whisp_timestamp.cpp  whisp_timestamp.h  zlibutil.cpp  zlibutil.h
server/src/common/util/: urlencode_util.h
server/src/config/: parse_config.cpp  parse_config.h  server_config.yml
server/src/database/: MySQLConnectionPool.h  TalkUserDAO.h  db_mysqlconn_pool.h  db_user_info.cpp  db_user_info.h  demo.cpp  whisp_db.cpp  whisp_db.h  whisp_mysqlconn_pool.cpp  whisp_mysqlconn_pool.h  whisp_sqlconn_factory.cpp  whisp_sqlconn_factory.h
server/src/log/: TalkLog.cpp  TalkLog.h  whisp_log.cpp  whisp_log.h
server/src/network/: acceptor.cpp  acceptor.h  byte_buffer.cpp  byte_buffer.h  channel.cpp  channel.h  epoll_poller.cpp  epoll_poller.h  event_loop.cpp  event_loop.h  event_loop_thread.cpp  event_loop_thread.h  event_loop_threadpool.cpp  event_loop_threadpool.h  inet_address.cpp  inet_address.h  inet_endian.h  net_callback.h  poller.cpp  poller.h  protocol_stream.cpp  protocol_stream.h  tcp_connect.cpp  tcp_connect.h  tcp_server.cpp  tcp_server.h  tcp_session.cpp  tcp_session.h  timer.cpp  timer.h  timer_id.h  timer_queue.cpp  timer_queue.h  w_sockets.cpp  w_sockets.h
server/src/service/: bussiness_logic.cpp  bussiness_logic.h  net_server.cpp  net_server.h  user_manager.cpp  user_manager.h  whisp_net_server.cpp  whisp_thread_pool.cpp  whisp_thread_pool.h
server/src/service/chat/: http_server.cpp  http_server.h  http_session.cpp  http_session.h
server/src/service/register/: login_register_server.cpp  login_register_server.h
server/src/util/: daemon_run.cpp  daemon_run.h
server/test/: CMakeLists.txt  TestDB.cpp  TestLog.cpp  TestUserDAO.cpp  test_db.cpp  test_log.cpp  test_thread_pool.cpp  test_user_info.cpp
